fix color on mobile

--- a/app/assets/stylesheets/layout/_sections.scss
+++ b/app/assets/stylesheets/layout/_sections.scss
@@ -55,7 +55,7 @@
   }
 
   &__link {
-    color: #333;
+    color: white;
 
     @include respond-to(xs) {
       color: white;
